typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity9.ts.stderr
error: Unexpected token Some(BinOp(Gt))
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity9.ts:2:1
  |
2 | > 2;
  | ^

